# lyra

./: README.md  pyproject.toml
scr/: assistant.py  audio.py  cli.py  commands.py  config.py  playsound.py  test.py  wakeword.py
src/: assistant.py  audio.py  cli.py  commands.py  config.py  playsound.py  test.py  wakeword.py
