[project]
name = "lyra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "numpy>=2.4.2",
    "pyaudio>=0.2.14",
    "scipy>=1.17.0",
    "setuptools>=80.10.2",
    "sounddevice>=0.5.5",
    "speechrecognition>=3.14.5",
    "webrtcvad>=2.0.10",
]
